<resources>
    <string name="app_name">Racoon</string>
    <string name="Settings_name">Settings</string>
    <string name="Files_name">Files</string>
    <string name="Audio_name">Audio</string>
    <string name="Reading_name">Student Book</string>
    <string name="Video_name">Video</string>
    <string name="Exams_name">Exams</string>
    <string name="Payment_name">Payment</string>
    <string name="RecordingTool_name">Recording Tool</string>
    <string name="StemTools_name">Stem Tools</string>
    <string name="Homework_name">Workbook</string>
    <string name="company_name">STEM Learning Center</string>
    <string name="about_name">About</string>

    <!--Folder Activity-->
    <string name="Group1_name">Group 1</string>
    <string name="Group2_name">Group 2</string>
    <string name="Group3_name">Group 3</string>
    <string name="Practices_name">Practices</string>
    <string name="Books_name">Student Book</string>
    <string name="Photos_name">Photos</string>
    <string name="Manual_name">Manual</string>
    <string name="Other_name">Other</string>
    <string name="Teacher_name">Teacher</string>

    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered in Firebase now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="word_ref">Word Reference</string>



    <string name="failed">FAILED</string>

    <string name="APP_KEY">APP_KEY_HERE</string>
    <string name="sign_in">Sign in</string>

</resources>


