<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:theme="@style/StemLearningWorldTheme"
    android:background="@color/background_material_dark"
    android:weightSum="10"
    tools:context="com.stemlearningworld.stem_app_one.FilesActivity">



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"

            >

            <TextView

                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:background="@drawable/banner_logo"
                android:textAlignment="textStart"
                android:paddingBottom="10dp"
                android:fontFamily="@font/montserratlight"
                android:text="@string/company_name"
                android:textSize="18sp"
                android:gravity="bottom"
                android:textColor="@color/foreground_material_dark"
                tools:ignore="RtlCompat" />


            <!--First row-->
            <LinearLayout
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="3"
                android:elevation="10dp"

                >
                <RelativeLayout
                    android:id="@+id/file_group1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_margin="2dp"
                    android:orientation="vertical"
                    android:background="@color/paymentcolor"
                    android:elevation="10dp"


                    >
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="3dp"
                        android:layout_gravity="center"
                        android:src="@mipmap/ic_action_folder_closed"
                        android:tint="@color/icons"
                        android:elevation="15dp"

                        />
                    <TextView

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="1dp"
                        android:layout_marginTop="60dp"

                        android:text="@string/Group1_name"
                        android:textColor="@color/text_color_primary"
                        android:textAlignment="center"
                        android:fontFamily="@font/montserratlight"
                        android:elevation="15dp"

                        />

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/file_group2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_margin="2dp"
                    android:orientation="vertical"
                    android:background="@color/homeworkcolorlight"
                    android:elevation="10dp"


                    >
                    <ImageView
                        android:id="@+id/image"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="3dp"
                        android:layout_gravity="center"
                        android:src="@mipmap/ic_action_folder_closed"
                        android:tint="@color/icons"
                        android:elevation="15dp"

                        />
                    <TextView

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="1dp"
                        android:layout_marginTop="60dp"

                        android:text="@string/Group2_name"
                        android:textColor="@color/text_color_primary"
                        android:textAlignment="center"
                        android:fontFamily="@font/montserratlight"
                        android:elevation="15dp"

                        />

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/file_group3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_margin="2dp"
                    android:orientation="vertical"
                    android:background="@color/smartcolorlight"
                    android:elevation="10dp"


                    >
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="3dp"
                        android:layout_gravity="center"
                        android:src="@mipmap/ic_action_folder_closed"
                        android:tint="@color/icons"
                        android:elevation="15dp"

                        />
                    <TextView

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="1dp"
                        android:layout_marginTop="60dp"

                        android:text="@string/Group3_name"
                        android:textColor="@color/text_color_primary"
                        android:textAlignment="center"
                        android:fontFamily="@font/montserratlight"
                        android:elevation="15dp"

                        />

                </RelativeLayout>

            </LinearLayout>
            <!--End First row-->
            <!--Second row-->
            <LinearLayout
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="3"
                android:elevation="10dp"

                >
                <RelativeLayout
                    android:id="@+id/file_practices"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_margin="2dp"
                    android:orientation="vertical"
                    android:background="@color/videocolorlight"
                    android:elevation="10dp"


                    >
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="3dp"
                        android:layout_gravity="center"
                        android:src="@mipmap/ic_action_folder_closed"
                        android:tint="@color/icons"
                        android:elevation="15dp"

                        />
                    <TextView

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="1dp"
                        android:layout_marginTop="60dp"

                        android:text="@string/Practices_name"
                        android:textColor="@color/text_color_primary"
                        android:textAlignment="center"
                        android:fontFamily="@font/montserratlight"
                        android:elevation="15dp"

                        />

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/file_books"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_margin="2dp"
                    android:orientation="vertical"
                    android:background="@color/audiocolor"
                    android:elevation="10dp"


                    >
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="3dp"
                        android:layout_gravity="center"
                        android:src="@mipmap/ic_action_folder_closed"
                        android:tint="@color/icons"
                        android:elevation="15dp"

                        />
                    <TextView

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="1dp"
                        android:layout_marginTop="60dp"

                        android:text="@string/Books_name"
                        android:textColor="@color/text_color_primary"
                        android:textAlignment="center"
                        android:fontFamily="@font/montserratlight"
                        android:elevation="15dp"

                        />

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/file_photos"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_margin="2dp"
                    android:orientation="vertical"
                    android:background="@color/filescolor"
                    android:elevation="10dp"


                    >
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="3dp"
                        android:layout_gravity="center"
                        android:src="@mipmap/ic_action_folder_closed"
                        android:tint="@color/icons"
                        android:elevation="15dp"

                        />
                    <TextView

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="1dp"
                        android:layout_marginTop="60dp"

                        android:text="@string/Photos_name"
                        android:textColor="@color/text_color_primary"
                        android:textAlignment="center"
                        android:fontFamily="@font/montserratlight"
                        android:elevation="15dp"

                        />

                </RelativeLayout>

            </LinearLayout>
            <!--End second row-->
            <!--Third row-->
            <LinearLayout
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="2"
                android:elevation="10dp"

                >
                <RelativeLayout
                    android:id="@+id/file_manual"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_margin="2dp"
                    android:orientation="vertical"
                    android:background="@color/paymentcolorlight"
                    android:elevation="10dp"


                    >
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="3dp"
                        android:layout_gravity="center"
                        android:src="@mipmap/ic_action_folder_closed"
                        android:tint="@color/icons"
                        android:elevation="15dp"

                        />
                    <TextView

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="1dp"
                        android:layout_marginTop="60dp"

                        android:text="@string/Manual_name"
                        android:textColor="@color/text_color_primary"
                        android:textAlignment="center"
                        android:fontFamily="@font/montserratlight"
                        android:elevation="15dp"

                        />

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/file_other"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_margin="2dp"
                    android:orientation="vertical"
                    android:background="@color/bookcolorlight"
                    android:elevation="10dp"


                    >
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="3dp"
                        android:layout_gravity="center"
                        android:src="@mipmap/ic_action_folder_closed"
                        android:tint="@color/icons"
                        android:elevation="15dp"

                        />
                    <TextView

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="1dp"
                        android:layout_marginTop="60dp"

                        android:text="@string/Other_name"
                        android:textColor="@color/text_color_primary"
                        android:textAlignment="center"
                        android:fontFamily="@font/montserratlight"
                        android:elevation="15dp"

                        />

                </RelativeLayout>



            </LinearLayout>

            <!-- End third row-->
            <LinearLayout
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="1"
                android:elevation="10dp"

                >
                <RelativeLayout
                    android:id="@+id/file_teacher"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_margin="2dp"
                    android:orientation="vertical"
                    android:background="@color/videocolor"
                    android:elevation="10dp"



                    >
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="3dp"
                        android:layout_gravity="center"
                        android:src="@mipmap/ic_action_folder_closed"
                        android:tint="@color/icons"
                        android:elevation="15dp"

                        />
                    <TextView

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="1dp"
                        android:layout_marginTop="60dp"

                        android:text="@string/Manual_name"
                        android:textColor="@color/text_color_primary"
                        android:textAlignment="center"
                        android:fontFamily="@font/montserratlight"
                        android:elevation="15dp"
                        />
                </RelativeLayout>
            </LinearLayout>
            <!-- End third row-->
        </LinearLayout>
    </ScrollView>
</LinearLayout>
